# testNasca

./: .gitignore  README.md
acc/: .gitignore  CMakeLists.txt  README.md  acc.cpp  acc.h
calculator/: CMakeLists.txt  application.cpp  application.h  application_calc_core.cpp  application_calc_core.h  application_config.cpp  application_config.h  application_data.cpp  application_data.h  application_input.cpp  application_input.h  application_output.cpp  application_output.h  config.toml  main.cpp
calculator/tests/: CMakeLists.txt  tests.cpp  tests_application.cpp  tests_application_calc_core.cpp  tests_application_config.cpp  tests_application_data.cpp  tests_application_input.cpp  tests_application_output.cpp
calculator/tests/files/: config_1.toml  config_2.toml  config_3.toml  config_4.toml  config_5_only_input.toml
calculator/tests/files/input/: test_1.csv  test_2.csv
calculator/tests/files/output/: result.csv
docs/: codestyle.md  task.md
